updating css with correct spacing and added blue borders around the images

--- a/style.css
+++ b/style.css
@@ -7,3 +7,33 @@ body,
 display: flex;
 flex-direction: column;
 }
+
+.header,
+.first,
+.images-second,
+.fourth,
+.links{
+    display: flex;
+}
+
+.second-header{
+    text-align: center;
+}
+
+.image-subtext p{
+    width: 180px;
+    text-align: center;
+}
+
+.images-second{
+    margin-left: auto;
+    margin-right: auto;
+    gap: 20px;
+}
+
+.image-subtext img{
+    height: 200px;
+    border-radius: 10px;
+    border: solid blue 2px;
+    width: 200px;
+}
